--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "jest": "^28.1.3",
     "jest-preset-angular": "^12.2.0",
     "primeicons": "^5.0.0",
-    "primeng": "^14.0.0-rc.1",
+    "primeng": "^14.0.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
